# yonata

./: .gitignore  README.md  class_template.py  pyproject.toml  results.json  schema.txt  testing.py
docs/: conf.py  index.rst  yonata.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  yonata.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  yonata.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  yonata.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/yonata/: benchmark.html  core.html  dantic.html  database.html  object_storage.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
example_folder/2/: final project ieee - ver 3.docx
example_folder/3/: 10.48550_arxiv.1606.08905.ris
local/example_folder/1/: output_opencv_edge_osd_2.xlsx
local/example_folder/3/: citation-390544723.ris
local/experiment/: reading_writing.ipynb  validate_deepdiff.ipynb  validate_enum.ipynb  validate_supervision.ipynb
src/yonata/: __init__.py  __main__.py  benchmark.py  config.py  constant.py  core.py  dantic.py  database.py  files.py  gui.py  object_storage.py  preprocessing.py  printers.py  utils.py  variables.py  vlm.py
tests/: test_benchmark.py  test_files.py  test_printers.py
tests/test_benchmark/test_invoice_ocr_multimodal_openai/: expected_output.json  prompt.txt  schema.json
